Added xml instead of json

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -29,7 +29,8 @@
         android:id="@+id/recyclerAuthors"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:paddingHorizontal="@dimen/margin_default"
+        android:padding="@dimen/margin_default"
+        android:clipToPadding="false"
         app:layout_constraintTop_toBottomOf="@id/delimiter"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:itemCount="3"
