--- a/app/src/main/res/layout/item_author.xml
+++ b/app/src/main/res/layout/item_author.xml
@@ -5,22 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:elevation="2dp">
-    <LinearLayout
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvFullName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="8dp">
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvFirstName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="@tools:sample/first_names"/>
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvLastName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="@tools:sample/last_names"/>
-    </LinearLayout>
+        android:layout_margin="@dimen/margin_default"
+        tools:text="@tools:sample/full_names"/>
 </androidx.cardview.widget.CardView>
