--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -31,6 +31,7 @@
     <style name="Theme.AuthorsPRH.TextView" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/colorText</item>
+        <item name="android:background">@null</item>
     </style>
 
     <style name="Theme.AuthorsPRH.TextView.Title" parent="Theme.AuthorsPRH.TextView">
